@@ -5,10 +5,10 @@ It was downloaded from http://qico.sourceforge.net/
 
 Copyright:
 
-Stepan Pologov, sisoft@bk.ru, icq 161380143
-Cyril Margorin, 2:5020/2999.18, cyrilm@tower.pp.ru
-Lev Serebryakov, 2:5030/661, lev@serebryakov.spb.ru, icq 3670018 (up to 0.49.9)
-Pavel Kurnosoff, 2:5030/736.25, pqr@yasp.com, icq 45906870 (up to 0.45pl3.1)
+Stepan Pologov, sisoft@bk.ru, 2:467/126.125
+Cyril Margorin, cyrilm@tower.pp.ru, 2:5020/2999.18 (official branch)
+Lev Serebryakov, lev@serebryakov.spb.ru, 2:5030/661, icq 3670018 (up to 0.49.9)
+Pavel Kurnosoff, pqr@yasp.com, 2:5030/736.25, icq 45906870 (up to 0.45pl3.1)
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
